[package]
name = "bencher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive"] }
log = "0.4.17"
mimalloc = "0.1.30"
mysql_async = "0.30.0"
rand = { version = "0.8.5", features = ["small_rng"] }
simple_logger = "3.0.0"
tokio = { version = "1.21.2", features = ["full"] }
